# external-sort

./: README.md  __main__.py  constants.py  external_sort.py  pyproject.toml
.github/workflows/: ci.yml
external_sort/: __init__.py  __main__.py  external_sort.py  my_file.py
tests/: __init__.py  test_external_sort.py
